Fixed outline visible in chrome

--- a/src/components/landing.css
+++ b/src/components/landing.css
@@ -189,8 +189,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 195px;
-  width: 195px;
+  height: 194px;
+  width: 194px;
   border-radius: 100px;
   border-width: 2px;
   border-color: var(--outline-colour);
